--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     	"infyomlabs/adminlte-templates": "5.5.x-dev",
     	"infyomlabs/swagger-generator": "dev-master",
     	"jlapp/swaggervel": "dev-master",
-    	"doctrine/dbal": "~2.3"
+    	"doctrine/dbal": "~2.3",
+        "nesbot/carbon": "^1.24"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
